--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p id="about-para">This site was created by Raja Shekar. It uses data from Mapbox.com and darksky.net!</p>
             <img class='aboutImg' src="./img/Raja Shekar.jpg">
         </div>
 
